# python-boilerplate

./: .flake8  .gitignore  README.md  pyproject.toml
src/: main.py
tests/: test_main.py
