[tool.poetry]
name = "Python Boilerplate"
version = "0.1.0"
description = "This is a python boilerplate that uses Poetry to manage the dependencies."
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
known_first_party = ["src", "tests"]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
pythonpath = "."
