[tool.poetry]
name = "Python Boilerplate"
version = "0.1.0"
description = "This is a python boilerplate that uses Poetry to manage the dependencies."
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.pytest.ini_options]
pythonpath = "."
